# memchr-benchmark

./: .gitignore  Makefile  README.md  benchmark.py  controller.py  glibc_pthread.c  main_pthread.c  main_pthread_blocks.c  main_pthread_cancels.c  main_pthread_cancels1.c  main_pthread_cancels2.c  main_pthread_cancels3.c  main_pthread_cancels4.c  main_pthread_cancels5.c  main_pthread_cancels6.c  makefile  memchr_avx2.S  memchr_avx2_hacked.h  memchr_avx2_unhacked.S  memchr_benchmark.c  memchr_glibc.c  memchr_looped.c  memchr_main.c  memchr_omp.c  memchr_simple.c  memchr_sse.S  meson.build  simd_overhead.c  simd_overhead_benchmark.py  throughput_test.S  vm_results.json
benchmark/: cancels_benchmark_avx2.py  cancels_benchmark_low_level_papi.py  cancels_benchmark_papi.py  cancels_benchmark_rusage.py
include/: memchr.h
parallel_bins/: blocks_benchmark.py  cancels_benchmark.py  cancels_benchmark_avx2.py  cancels_benchmark_low_level_papi.py
profile/: main_pthread_cancels1.c  main_pthread_cancels3.c  main_pthread_cancels6.c
src/: main.c  main_pthread_cancels2.c  main_pthread_cancels5.c  main_single_task.c  memchr.h  meson.build  papi_events.h
src/arm/: meson.build
src/c/: memchr_looped.c  meson.build
src/generics/: memchr_glibc.c  memchr_simple.c  meson.build
src/multithread/: main_pthread_blocks.c  meson.build
src/x86-64/: memchr_avx2.S  memchr_avx2_hacked.S  memchr_avx2_hacked.h  memchr_avx512.c  memchr_sse.S  meson.build  throughput_test.S
