avx2 = files('memchr_avx2.S')
#avx2_hacked = files('memchr_avx2_hacked.S')
avx512 = files('memchr_avx512.c')
sse = files('memchr_sse.S')
throughput = files('throughput_test.S')

project_sources += avx2
project_sources += avx512
project_sources += sse
project_sources += throughput
#project_sources += avx2_hacked
